--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.2",
+    "react-imask": "^6.4.3",
     "react-router-dom": "^6.6.1",
     "styled-components": "^5.3.6",
     "zod": "^3.20.2"
